first draft of hello-FOSS official website

--- a/index.html
+++ b/index.html
@@ -6,19 +6,57 @@ layout: landing
 						<div class="inner">
 							<h2>{{ site.title }}</h2>
 							<p>{{ site.description | markdownify }}</p>
-							<ul class="actions">
+							<!-- <ul class="actions">
 								<li><a href="#" class="button special">Activate</a></li>
-							</ul>
+							</ul> -->
+							<br><br>
+							So far 2 people have contributed in building this website!<br>
+							PS: Add a one to the count when you contribute for the first time <br>
+							PPS: Also cross check the count with the commits on the repository :p
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
 
-				<!-- One -->
-					<section id="one" class="wrapper style1 special">
+				<!-- Three -->
+					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
+								<h2>All you need to know</h2>
+							</header>
+							<ul class="features">
+								<li class="icon fa-laptop">
+									<h3>What is Hello-FOSS?</h3>
+									<p>Festival launched by WnCC, IIT Bombay to instill and encourage the culture of Open Source in the institute</p>
+								</li>
+								<li class="icon fa-heart-o">
+									<h4>Purpose of this Website</h4>
+							<p>If you were stuck with some error and you feel someone else can fall into this too, add a blog here regarding issue and it's fix cause CODERS TOGETHER STRONG! :)</p>
+								</li>
+								<li class="icon fa-list">
+									<h3>Fields of Projects</h3>
+									<p>To cover interests of most of the crowd, we have projects on DSA, Web and App Developement and, Machine Learning</p>
+								</li>
+								<li class="icon fa-code">
+									<h3>Get Started</h3>
+									<p>Links to the projects have been added below, go to the repos, read the instructions there, make your changes to the repo and create a pull request and you're done!</p>
+								</li>
+								<li class="icon fa-flag-o">
+									<h4>Participation in Hacktoberfest</h4>
+									<p>All the projects have repositories under the hacktoberfest tag, so contributing to this project gets you participation in Hacktoberfest as well. PS: Don't forget to register on the <b><a href="https://hacktoberfest.digitalocean.com/">Hacktoberfest</a></b> website</p>
+								</li>
+								<li class="icon fa-paper-plane-o">
+									<h3>Discussion Forum</h3>
+									<p>Join the <b><a href="https://discord.gg/mzhyrvS">Discord</a></b> server to get connected to the community. Feel free to ask for help in case you're stuck or clueless at any point</p>
+								</li>
+							
+							</ul>
+						</div>
+					</section>
+					<!-- One -->
+					<!-- <section id="one" class="wrapper style1 special">
+						<div class="inner">
+							<header class="major">
+								<h2>Purpose of this Website</h2></header>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
 								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
 							</header>
@@ -28,80 +66,54 @@ layout: landing
 								<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
 							</ul>
 						</div>
-					</section>
+					</section> -->
+
 
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
+						<header class="major">
+							<br>
+							<center><h2>Projects</h2></header></center>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/pic01.jpg" height="500" alt="" /></div><div class="content">
+								<h2>Machine Learning</h2>
+								<p>Building basic ML models on the MNIST dataset. Checkout the repository for problem statement.</p>
+								<a href="https://github.com/wncc/Hello-FOSS-ML" class="button special">Link to Repo</a>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/pic02.jpg" height="500" alt="" /></div><div class="content">
+								<h2>Web Development</h2>
+								<p>A Chat application built using Python, Flask, HTML and Javascript. You can solve the problem statement or add more feautures to the app.</p>
+								<a href="https://github.com/wncc/Hello-FOSS-Chat" class="button special">Link to Repo</a>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/pic03.jpg" height="500" alt="" /></div><div class="content">
+								<h2>Data Structures<br />
+								and Algorithms</h2>
+								<p>Implement various data structures in Python.You are free to google and search on the data structures, however the implementation must be yours.</p>
+								<a href="https://github.com/wncc/Hello-FOSS-DSAt" class="button special">Link to Repo</a>
 							</div>
 						</section>
-					</section>
-
-				<!-- Three -->
-					<section id="three" class="wrapper style3 special">
-						<div class="inner">
-							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
-							</header>
-							<ul class="features">
-								<li class="icon fa-paper-plane-o">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-headphones">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-heart-o">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-flag-o">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-							</ul>
-						</div>
+						<section class="spotlight">
+							<div class="image"><img src="images/pic04.jpg" height="500" alt="" /></div><div class="content">
+								<h2>App Development</h2>
+								<p>A fully-functional Scientific Calculator Application supports basic calculations, PEDMAS rules and perform scientific calculations, trigonometric functions. Checkout the repo for problem statement.</p>
+								<a href="https://github.com/wncc/Hello-FOSS-Calci" class="button special">Link to Repo</a>
+							</div>
+						</section>
 					</section>
 
 				<!-- CTA -->
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+								<h2>Any reviews/feedback ?</h2>
+								<p>Fill out this google form to let us know!</p>
 							</header>
 							<ul class="actions vertical">
-								<li><a href="#" class="button fit special">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
+								<li><a href="https://forms.gle/7Z3LuzQJEXgFS9Hk6" class="button big" color="63c5da">Link to form</a></li>
 							</ul>
 						</div>
 					</section>
