minor bugs fixed

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: landing
 					</section>
 
 				<!-- Three -->
-					<section id="three" class="wrapper style3 special">
+					<section id="one" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
 								<h2>All you need to know</h2>
@@ -30,7 +30,7 @@ layout: landing
 								</li>
 								<li class="icon fa-heart-o">
 									<h4>Purpose of this Website</h4>
-							<p>If you were stuck with some error and you feel someone else can fall into this too, add a blog here regarding issue and it's fix cause CODERS TOGETHER STRONG! :)</p>
+							<p>If you were stuck with some error and you feel someone else can fall into this too, add a blog <b><a href="{{ site.baseurl }}/blogs.html">here</a></b> regarding issue and it's fix cause CODERS TOGETHER STRONG! :)</p>
 								</li>
 								<li class="icon fa-list">
 									<h3>Fields of Projects</h3>
