--- a/blogs.html
+++ b/blogs.html
@@ -11,7 +11,10 @@ title: Community Blogs
 		<right><i> -Divyanshi Kamra </i></right>
 		<p>You only need to install and run Jekyll and write a few sentences to do so. No knowledge related to Jekyll is required.
 			<a href="{{ "/blog2_dk.html" | prepend: site.baseurl }}">Read More</a></p><hr/>
-
+		<h4> #3: Why Open Source?</h4>
+		<right><i> -Akshit Srivastava </i></right>
+		<p>Open Source is not an old phenomenon. In this blog we'll see how it became so popular.
+			<a href="{{ "/blog3_as.html" | prepend: site.baseurl }}">Read More</a></p><hr/>
 		<!-- <h4> #number of article: short heading</h4>
 			<right><i> -your name </i></right>
 		    <p>add one liner description here
