--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: landing
 							<ul class="features">
 								<li class="icon fa-laptop">
 									<h3>What is Hello-FOSS?</h3>
-									<p>Festival launched by WnCC, IIT Bombay to instill and encourage the culture of Open Source in the institute</p>
+									<p>Festival launched by WnCC, IIT Bombay and DevCom, IIT bombay to instill and encourage the culture of Open Source in the institute</p>
 								</li>
 								<li class="icon fa-heart-o">
 									<h4>Purpose of this Website</h4>
