--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: landing
 								<li><a href="#" class="button special">Activate</a></li>
 							</ul> -->
 							<br><br>
-							So far 2 people have contributed in building this website!<br>
+							So far 4 people have contributed in building this website!<br>
 							PS: Add a one to the count when you contribute for the first time <br>
 							PPS: Also cross check the count with the commits on the repository :p
 						</div>
@@ -34,11 +34,19 @@ layout: landing
 								</li>
 								<li class="icon fa-list">
 									<h3>Fields of Projects</h3>
-									<p>To cover interests of most of the crowd, we have projects on DSA, Web and App Developement and, Machine Learning</p>
+									<p>To cover interests of most of the crowd, we have projects on DSA, Web and App Development and, Machine Learning</p>
 								</li>
 								<li class="icon fa-code">
 									<h3>Get Started</h3>
 									<p>Links to the projects have been added below, go to the repos, read the instructions there, make your changes to the repo and create a pull request and you're done!</p>
+								</li>
+								<li class="icon fa-book">
+									<h3>Beginner Tutorials</h3>
+									<p>If terms like repository, git, github sound new to you, start by watching this <b><a href="https://youtu.be/_W0C8cIyROw">workshop</a></b> conducted by us or follow this <b><a href="https://github.com/wncc/CodeInQuarantine/tree/master/Week_4_Git">tutorial</a></b></p> 
+								</li>
+								<li class="icon fa-code-fork">
+									<h3>First Contribution</h3>
+									<p>First contributions are always special! Follow along this <b><a href="{{ site.baseurl }}/blog4_lp.html">article</a></b> for step wise introduction to help you make your first contribution! </p>
 								</li>
 								<li class="icon fa-flag-o">
 									<h4>Participation in Hacktoberfest</h4>
