--- a/blogs.html
+++ b/blogs.html
@@ -15,10 +15,14 @@ title: Community Blogs
 		<right><i> -Akshit Srivastava </i></right>
 		<p>Open Source is not an old phenomenon. In this blog we'll see how it became so popular.
 			<a href="{{ "/blog3_as.html" | prepend: site.baseurl }}">Read More</a></p><hr/>			
-		<h4> #3: Make your First Contribution</h4>
+		<h4> #4: Make your First Contribution</h4>
 		<right><i> -Latika Patel </i></right>
 		<p>First contributions are always special! Learn how to make your first pull request.
 			<a href="{{ "/blog4_lp.html" | prepend: site.baseurl }}">Read More</a></p><hr/>
+		<h4> #5: How does Open Source software sustain?</h4>
+		<right><i> -Ayan Agrawal </i></right>
+		<p>A brief look into some business models adopted by open source softwares.
+			<a href="{{ "/blog5_aa.html" | prepend: site.baseurl }}">Read More</a></p><hr/>
 		<!-- <h4> #number of article: short heading</h4>
 			<right><i> -your name </i></right>
 		    <p>add one liner description here
