--- a/trial.html
+++ b/trial.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 ---
-<h3>heading of your blog</h3>
-// add your content here
-<i>-your name</i>
-<hr />
+<CENTER><B><I><U><H3>Heading of your blog</H3></U></I></B></CENTER>
+<CENTER><I><B>// add your content here</B></I></CENTER>
+<B><I><U><CENTER><I>-Your name</I></CENTER></U></I></B>
+<HR color="RED">
